Changed some things to please Yandex mod team lol

--- a/Web_Build/index.html
+++ b/Web_Build/index.html
@@ -124,6 +124,7 @@
             createUnityInstance(canvas, config, (progress) => {
                 progressBarFull.style.width = 100 * progress + "%";
             }).then((unityInstance) => {
+                gameInstance = unityInstance;
                 loadingBar.style.display = "none";
                 //fullscreenButton.onclick = () => {
                 //    unityInstance.SetFullscreen(1);
