Yandex moderation team is too hard to please bro

--- a/Web_Build/index.html
+++ b/Web_Build/index.html
@@ -118,6 +118,7 @@
 
         loadingBar.style.display = "block";
 
+        var gameInstance = null;
         var script = document.createElement("script");
         script.src = loaderUrl;
         script.onload = () => {
